--- a/restaurant/pom.xml
+++ b/restaurant/pom.xml
@@ -98,11 +98,6 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>org.assertj</groupId>
-			<artifactId>assertj-core</artifactId>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
 			<groupId>io.github.bonigarcia</groupId>
 			<artifactId>webdrivermanager</artifactId>
 			<version>3.8.1</version>
@@ -160,6 +155,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-failsafe-plugin</artifactId>
+				<version>3.0.0-M5</version>
 				<executions>
 					<execution>
 						<goals>
@@ -168,6 +164,25 @@
 						</goals>
 					</execution>
 				</executions>
+			</plugin>
+			<plugin>
+				<groupId>tech.grasshopper</groupId>
+				<artifactId>cucumber-pdf-plugin</artifactId>
+				<version>1.1.0</version>
+				<executions>
+					<execution>
+						<id>report</id>
+						<phase>post-integration-test</phase>
+						<goals>
+							<goal>pdfreport</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<cucumberJsonReportDirectory>${project.build.directory}/report</cucumberJsonReportDirectory>
+					<cucumberPdfReportDirectory>pdf-report</cucumberPdfReportDirectory>
+					<strictCucumber6Behavior>true</strictCucumber6Behavior>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
