Enabled h2 console from exec jar

--- a/restaurant/pom.xml
+++ b/restaurant/pom.xml
@@ -151,6 +151,10 @@
 						</goals>
 					</execution>
 				</executions>
+
+				<!-- For creating executable jar file -->
+				<!-- <executions> <execution> <goals> <goal>repackage</goal> </goals> 
+					</execution> </executions> -->
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
